gcc/testsuite/rust/rustc/ui/coherence/strict-coherence-needs-negative-coherence_dg.rs
#![feature(rustc_attrs)]

#[rustc_strict_coherence]
trait Foo {}
// { dg-error "" "" { target *-*-* } .-1 }

fn main() {}

